# math5110-vector-compression

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/src/backend/: __init__.py  main.py
backend/src/backend/api/: app.py
backend/src/backend/api/routes/: search.py
backend/src/backend/core/: corpus.py
backend/src/backend/schemas/: __init__.py  search.py
docs/: PAPER.md  SLIDES.md  SURVEY.md  WRITEUP.md  paper.tex
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/search/: HeroSection.svelte  HitCard.svelte  ResultsPanel.svelte  SearchPanel.svelte  StoragePanel.svelte
frontend/src/lib/search/: chunk-markdown.test.ts  chunk-markdown.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: sanitize-html.d.ts
python/: config.yaml
python/data/: rag_corpus.yaml  rag_queries.yaml
python/notebooks/: application.ipynb
python/src/vector_linalg/: __init__.py  canvas.py  compression.py  config.py  embeddings.py  github_book.py  interpret.py  metrics.py  pdf_corpus.py  plots.py  rag.py  study.py  text_chunks.py
scripts/: export_presentation_results.py  export_rag_baseline.py  fix_github_math.py  list_rag_chunks.py  probe_canvas.py  probe_canvas_pdfs.py  run_all.py  search_class.py  search_ui.py
