[project]
name = "vector-linalg"
version = "0.2.0"
description = "Vector compression survey — JL, quantization, token embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.24",
    "httpx>=0.28",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "openai>=1.0",
    "pymupdf>=1.24",
    "pymupdf4llm>=1.27.2.3",
    "gradio>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/vector_linalg"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
]
