[project]
name = "vector-linalg"
version = "0.2.0"
description = "From-scratch survey of vector compression methods (JL, SVD, sign/scalar quantization, TurboQuant) evaluated on token and RAG retrieval"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Clayton Schmidter" },
]
keywords = [
    "linear-algebra",
    "vector-compression",
    "quantization",
    "embeddings",
    "retrieval-augmented-generation",
]
dependencies = [
    "polars>=1.24",
    "httpx>=0.28",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "openai>=1.0",
]

[project.urls]
Repository = "https://github.com/claytomode/math5110-vector-compression"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/vector_linalg"]

[dependency-groups]
dev = []
