[project]
name = "vector-search-backend"
version = "0.1.0"
description = "FastAPI search API for MATH 5110 vector compression RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "vector-linalg",
]

[tool.uv.sources]
vector-linalg = { path = "..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
